Fix overflow issue

--- a/frontend/src/index.css
+++ b/frontend/src/index.css
@@ -36,7 +36,6 @@ body {
   display: inline-block;
   overflow: hidden;
   line-height: 1.05;
-  width: 100%;
 }
 
 .clip-text-welcome {
@@ -48,12 +47,16 @@ body {
   clip-path: inset(0 0 100% 0);
   white-space: nowrap;
   transition: none;
-  width: 100%;
 }
 
 @media (max-width: 768px) {
   .responsive-mobile {
     position: absolute;
     top: 33%;
+  }
+
+  .text-darkBrown,
+  .clip-text-welcome {
+    width: 100%;
   }
 }
